--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/runtime": "^7.6.0",
     "axios": "^0.19.0",
+    "jest-styled-components": "^6.3.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dev-utils": "^9.0.3",
@@ -13,7 +14,15 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "save": "^2.4.0",
     "styled-components": "^4.3.2"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!<rootDir>/node_modules/",
+      "!<rootDir>/public/"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/react": "^9.1.4",
+    "redux-mock-store": "^1.5.3"
   }
 }
